// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
.emotion-2 {
  outline: 0;
  background: #F0F0F5;
  border-radius: 0.75rem;
  padding: calc(0.25rem - 1px) 0.25rem;
  display: inline-block;
  width: 3rem;
  line-height: 0;
  border: 1px solid #AAAAB9;
  -webkit-transition: all .2s;
  transition: all .2s;
}

.emotion-1 {
  background: #FFFFFF;
  border-radius: 50%;
  display: inline-block;
  width: 1rem;
  height: 1rem;
  -webkit-transition: all .2s;
  transition: all .2s;
  border: 1px solid #8F8FA2;
  box-shadow: 0 1px 5px 0 rgba(0,0,0,0.2),0 3px 1px -2px rgba(0,0,0,0.12),0 2px 2px 0 rgba(0,0,0,0.14);
}

.emotion-3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  text-align: left;
}

.emotion-3:hover .emotion-2 {
  cursor: pointer;
  border-color: #696979;
}

.emotion-0 {
  opacity: 0;
  position: absolute;
  z-index: -1;
}

.emotion-0:checked + .emotion-2 {
  background: #0069D0;
  border-color: #0069D0;
}

.emotion-0:checked + .emotion-2:hover {
  border-color: #0069D0;
}

.emotion-0:checked + .emotion-2 > .emotion-1 {
  -webkit-transform: translateX(calc(1.5rem - 1px));
  -ms-transform: translateX(calc(1.5rem - 1px));
  transform: translateX(calc(1.5rem - 1px));
}

.emotion-0:focus + .emotion-2 {
  box-shadow: 0 0 0 2px #F0F0F5,0 0 0 4px #0069D0;
}

.emotion-0:disabled + .emotion-2 {
  opacity: 0.4;
  cursor: not-allowed;
}

.emotion-0:disabled + .emotion-2 + .css-1f2k2gl {
  color: #AAAAB9;
  cursor: not-allowed;
}

<div>
  <label
    class="emotion-3"
  >
    <input
      class="emotion-0"
      type="checkbox"
      value=""
    />
    <div
      class="emotion-2"
    >
      <span
        class="emotion-1"
      />
    </div>
  </label>
</div>
`;

exports[`should render correctly when disabled 1`] = `
.emotion-2 {
  outline: 0;
  background: #F0F0F5;
  border-radius: 0.75rem;
  padding: calc(0.25rem - 1px) 0.25rem;
  display: inline-block;
  width: 3rem;
  line-height: 0;
  border: 1px solid #AAAAB9;
  -webkit-transition: all .2s;
  transition: all .2s;
}

.emotion-1 {
  background: #FFFFFF;
  border-radius: 50%;
  display: inline-block;
  width: 1rem;
  height: 1rem;
  -webkit-transition: all .2s;
  transition: all .2s;
  border: 1px solid #8F8FA2;
  box-shadow: 0 1px 5px 0 rgba(0,0,0,0.2),0 3px 1px -2px rgba(0,0,0,0.12),0 2px 2px 0 rgba(0,0,0,0.14);
}

.emotion-3 {
  margin-left: 0.5rem;
}

.emotion-4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  text-align: left;
}

.emotion-4:hover .emotion-2 {
  cursor: pointer;
  border-color: #696979;
}

.emotion-0 {
  opacity: 0;
  position: absolute;
  z-index: -1;
}

.emotion-0:checked + .emotion-2 {
  background: #0069D0;
  border-color: #0069D0;
}

.emotion-0:checked + .emotion-2:hover {
  border-color: #0069D0;
}

.emotion-0:checked + .emotion-2 > .emotion-1 {
  -webkit-transform: translateX(calc(1.5rem - 1px));
  -ms-transform: translateX(calc(1.5rem - 1px));
  transform: translateX(calc(1.5rem - 1px));
}

.emotion-0:focus + .emotion-2 {
  box-shadow: 0 0 0 2px #F0F0F5,0 0 0 4px #0069D0;
}

.emotion-0:disabled + .emotion-2 {
  opacity: 0.4;
  cursor: not-allowed;
}

.emotion-0:disabled + .emotion-2 + .emotion-3 {
  color: #AAAAB9;
  cursor: not-allowed;
}

<div>
  <label
    class="emotion-4"
  >
    <input
      class="emotion-0"
      disabled=""
      type="checkbox"
      value="true"
    />
    <div
      class="emotion-2"
    >
      <span
        class="emotion-1"
      />
    </div>
    <span
      class="emotion-3"
    >
      Disabled
    </span>
  </label>
</div>
`;

exports[`should render correctly with label 1`] = `
.emotion-2 {
  outline: 0;
  background: #F0F0F5;
  border-radius: 0.75rem;
  padding: calc(0.25rem - 1px) 0.25rem;
  display: inline-block;
  width: 3rem;
  line-height: 0;
  border: 1px solid #AAAAB9;
  -webkit-transition: all .2s;
  transition: all .2s;
}

.emotion-1 {
  background: #FFFFFF;
  border-radius: 50%;
  display: inline-block;
  width: 1rem;
  height: 1rem;
  -webkit-transition: all .2s;
  transition: all .2s;
  border: 1px solid #8F8FA2;
  box-shadow: 0 1px 5px 0 rgba(0,0,0,0.2),0 3px 1px -2px rgba(0,0,0,0.12),0 2px 2px 0 rgba(0,0,0,0.14);
}

.emotion-3 {
  margin-left: 0.5rem;
}

.emotion-4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  text-align: left;
}

.emotion-4:hover .emotion-2 {
  cursor: pointer;
  border-color: #696979;
}

.emotion-0 {
  opacity: 0;
  position: absolute;
  z-index: -1;
}

.emotion-0:checked + .emotion-2 {
  background: #0069D0;
  border-color: #0069D0;
}

.emotion-0:checked + .emotion-2:hover {
  border-color: #0069D0;
}

.emotion-0:checked + .emotion-2 > .emotion-1 {
  -webkit-transform: translateX(calc(1.5rem - 1px));
  -ms-transform: translateX(calc(1.5rem - 1px));
  transform: translateX(calc(1.5rem - 1px));
}

.emotion-0:focus + .emotion-2 {
  box-shadow: 0 0 0 2px #F0F0F5,0 0 0 4px #0069D0;
}

.emotion-0:disabled + .emotion-2 {
  opacity: 0.4;
  cursor: not-allowed;
}

.emotion-0:disabled + .emotion-2 + .emotion-3 {
  color: #AAAAB9;
  cursor: not-allowed;
}

<div>
  <label
    class="emotion-4"
  >
    <input
      class="emotion-0"
      type="checkbox"
      value="true"
    />
    <div
      class="emotion-2"
    >
      <span
        class="emotion-1"
      />
    </div>
    <span
      class="emotion-3"
    >
      Active
    </span>
  </label>
</div>
`;
